<resources>
    <!--
     author: Hector Beltran & Marin Maksutaj
       @description: This file is used by the application to access the different string values.
    -->
    <string name="app_name">StockTracker</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="HelpTitle">User Manual</string>
    <string name="HelpBody">Welcome to StockTracker! In this section you can get a brief introduction into the platform.</string>
    <string name="API_KEY">lpzlmSvKEa918KkOWC8qqmQ8pN_cnf3p</string>
    <string name="share_button">Share</string>
    <string name="settings_title">Settings</string>
    <string name="news_title">"News for ticker: "</string>
    <string name="search_text">Search for a ticker symbol to add to your list.</string>
    <string name="stocks_section">In the first section of the app titled StockData you can get the latest stock prices through the graph and see a list of your favorite stocks!</string>
    <string name="search_section">The second section of the application will allow you to search for different ticker symbols, and if preferred add them into your favorite list to later check that stock\'s particular price graph</string>
    <string name="news_section">In the News section you will receive daily byte sized news concerning the finance world</string>
    <string name="preference_section">Finally, the preferences section gives you the ability to change several properties of the app for a truly unique experience!</string>
    <string name="saved_color_setting">COLOR_SETTING</string>
    <string name="stock_graphed">STOCK_GRAPHED</string>
    <string name="length_news">LENGTH_NEWS</string>
    <string name="line_graph">LINE_GRAPH</string>
    <string name="first_setting">Use line graph</string>
    <string name="second_setting">Lengthy news list</string>
    <string name="trend_setting">Display linear trend</string>
    <string name="trend_toggle">TREND_TOGGLE</string>
    <string name="hourly_setting">Hourly graph</string>
    <string name="sendButton">Send Email</string>
    <string name="sendEmailText">Select from contacts with email:</string>
    <string name="tickersPerChart">"Approximate entries per chart: "</string>
    <string name="tickers_setting">TICKERS_SETTING</string>
    <string name="refreshes_setting">Refreshing graph</string>
    <string name="refreshes_toggle">REFRESHES_SETTING</string>


</resources>