<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".HelpFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/HelpTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="30dp"
        android:textAlignment="center"
        android:text="@string/HelpTitle" />

    <TextView
        android:id="@+id/HelpBody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/HelpBody"
        android:textSize="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HelpTitle" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="50dp"
        android:layout_height="47dp"
        android:layout_marginStart="180dp"
        android:layout_marginTop="104dp"
        android:src="@drawable/sample_chart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="385dp"
        android:layout_height="54dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="164dp"
        android:text="@string/stocks_section"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="50dp"
        android:layout_height="49dp"
        android:layout_marginStart="180dp"
        android:layout_marginTop="228dp"
        android:src="@drawable/search_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="387dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="284dp"
        android:text="@string/search_section"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="52dp"
        android:layout_height="51dp"
        android:layout_marginStart="180dp"
        android:layout_marginTop="352dp"
        android:src="@drawable/news_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="383dp"
        android:layout_height="51dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="412dp"
        android:text="@string/news_section"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="55dp"
        android:layout_height="49dp"
        android:layout_marginStart="176dp"
        android:layout_marginTop="472dp"
        android:src="@drawable/settings_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="396dp"
        android:layout_height="62dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="532dp"
        android:text="@string/preference_section"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>