<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SettingsFragment">
    
    <TextView
        android:id="@+id/settingsTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="28dp"
        android:layout_margin="15dp"/>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/settingsTitle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="15dp"

        >
        <TextView
            android:id="@+id/linegraphSettingText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/first_setting"
            android:textSize="24dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/linegraphSettingToggle"
            app:layout_constraintHorizontal_weight="2"/>
        <ToggleButton
            android:id="@+id/linegraphSettingToggle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@+id/linegraphSettingText"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_weight="1"/>
        <TextView
            android:id="@+id/trendSettingsText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/trend_setting"
            android:textSize="24dp"
            app:layout_constraintTop_toBottomOf="@+id/linegraphSettingToggle"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/trendSettingsToggle"
            app:layout_constraintHorizontal_weight="2"/>
        <ToggleButton
            android:id="@+id/trendSettingsToggle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@+id/trendSettingsText"
            app:layout_constraintTop_toBottomOf="@+id/linegraphSettingToggle"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_weight="1"/>
        <TextView
            android:id="@+id/lengthSettingsText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/second_setting"
            android:textSize="24dp"
            app:layout_constraintTop_toBottomOf="@+id/trendSettingsToggle"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/lengthSettingToggle"
            app:layout_constraintHorizontal_weight="2"/>
        <ToggleButton
            android:id="@+id/lengthSettingToggle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@+id/lengthSettingsText"
            app:layout_constraintTop_toBottomOf="@id/trendSettingsToggle"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_weight="1"/>
        <TextView
            android:id="@+id/hourlySettingsText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/hourly_setting"
            android:textSize="24dp"
            app:layout_constraintTop_toBottomOf="@+id/lengthSettingToggle"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/hourlySettingToggle"
            app:layout_constraintHorizontal_weight="2"/>
        <ToggleButton
            android:id="@+id/hourlySettingToggle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@+id/hourlySettingsText"
            app:layout_constraintTop_toBottomOf="@id/lengthSettingToggle"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_weight="1"/>


    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>